# MyTemplate

./: .gitignore  README.md
c++_cmake_ctest_Test/: CMakeLists.txt
c_cmake_Test/: CMakeLists.txt
g++_Test/src/: hello.cpp
gtest_Test/: CMakeLists.txt
gtest_Test/inc/: ui.h
gtest_Test/inc/ui/: Hello.h
gtest_Test/src/: main.cpp
gtest_Test/src/ui/: Hello.cpp
gtest_Test/test/: test_main.cpp
